--- a/page1.html
+++ b/page1.html
@@ -22,7 +22,7 @@
   
 </head>
 <body>
-<section class="menu cid-quPydGharx" once="menu" id="menu1-o" data-rv-view="27">
+<section class="menu cid-quPydGharx" once="menu" id="menu1-o" data-rv-view="45">
 
     
 
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/k">free bootstrap templates</a></section><section class="features18 popup-btn-cards cid-qwZxKh5x06" id="features18-p" data-rv-view="29">
+<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="features18 popup-btn-cards cid-qwZxKh5x06" id="features18-p" data-rv-view="47">
 
     
 
