create github pages

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
   
 </head>
 <body>
-<section class="menu cid-quPydGharx" once="menu" id="menu1-q" data-rv-view="50">
+<section class="menu cid-quPydGharx" once="menu" id="menu1-q" data-rv-view="26">
 
     
 
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">free website creator</a></section><section class="mbr-section form4 cid-qx8feM1o64" id="form4-r" data-rv-view="52">
+<section class="engine"><a href="https://mobirise.co/h">how to make a website</a></section><section class="mbr-section form4 cid-qx8feM1o64" id="form4-r" data-rv-view="28">
 
     
 
@@ -71,7 +71,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0Dx_boXQiwvdz8sJHoYeZNVTdoWONYkU&amp;q=place_id:ChIJn6wOs6lZwokRLKy1iqRcoKw" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0Dx_boXQiwvdz8sJHoYeZNVTdoWONYkU&amp;q=place_id:ChIJY585lt4XaTQR5B4XIizihxA" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <h2 class="pb-3 align-left mbr-fonts-style display-2">
@@ -93,7 +93,7 @@
                     <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
                     </div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="XwjP8m6P6DHt0Gd5TLdQL4KxtLDuL9OboVdmyf/OW3Jy70PxKtEpfybIAp2hglMdUJih8qi3cRmw1c4ZYfSzUeA1lpxa4rJYPYtP5v6hakngPRQiAndUIsRg3p7GQovf">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="GbJHy0RzqaxiPUgeKcZdbbeDF5d43iFJ6Xqz4WEh2avH6/m55Y34U/+xyJ3noPixjLcGLjf1KQ2wxxnJHmPkWBH97uVIRTLkkMZCbaSeSdLEk2gr5p10mHQGRH7yLzW2">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-r">
