create github pages

--- a/page1.html
+++ b/page1.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-quPydGharx" once="menu" id="menu1-o" data-rv-view="115">
+<section class="menu cid-quPydGharx" once="menu" id="menu1-o" data-rv-view="192">
 
     
 
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="features18 popup-btn-cards cid-qwZxKh5x06" id="features18-p" data-rv-view="117">
+<section class="engine"><a href="https://mobirise.co/d">free web software</a></section><section class="features18 popup-btn-cards cid-qwZxKh5x06" id="features18-p" data-rv-view="194">
 
     
 
@@ -79,8 +79,7 @@
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
                         <div class="mbr-section-btn text-center"><a href="contact.html" class="btn btn-primary display-4">
-                                Learn More
-                            </a></div>
+                                暸解更多</a></div>
                         <img src="assets/images/mbr-1620x1080.jpg" alt="Mobirise" title="" media-simple="true">
                     </div>
                     <div class="card-box">
@@ -98,8 +97,7 @@
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
                         <div class="mbr-section-btn text-center"><a href="contact.html" class="btn btn-primary display-4">
-                                Learn More
-                            </a></div>
+                                暸解更多</a></div>
                         <img src="assets/images/mbr-1646x1080.jpg" alt="Mobirise" title="" media-simple="true">
                     </div>
                     <div class="card-box">
@@ -118,7 +116,7 @@
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
                         <div class="mbr-section-btn text-center"><a href="contact.html" class="btn btn-primary display-4">
-                                Learn More
+                                暸解更多
                             </a></div>
                         <img src="assets/images/03.jpg" alt="Mobirise" media-simple="true">
                     </div>
