--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-quPydGharx" once="menu" id="menu1-q" data-rv-view="305">
+<section class="menu cid-quPydGharx" once="menu" id="menu1-q" data-rv-view="359">
 
     
 
@@ -39,11 +39,11 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.com">
+                    <a href="https://yesme38.github.io/trad/">
                          <img src="assets/images/a-128x128.png" alt="Mobirise" title="" media-simple="true" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="https://mobirise.com">Atteipo</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="https://yesme38.github.io/trad/">Atteipo</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/o">bootstrap button</a></section><section class="mbr-section form4 cid-qx8feM1o64" id="form4-r" data-rv-view="307">
+<section class="engine"><a href="https://mobirise.co/b">web site creator</a></section><section class="mbr-section form4 cid-qx8feM1o64" id="form4-r" data-rv-view="361">
 
     
 
@@ -94,7 +94,7 @@
                     <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
                     </div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="7qe8ypRb+zMe9jNJHX2xZmNkxN15hza6Zt6PD6QbvpZBM2xFKyLcB9iuKKQ005J4U+xNv4d2MFgcwmTU3YiFULgvsPTuis4KjHB0JJFzCsvQF+0FIBr5HQa9WeL5yujE">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="Phm1yM+1VJuH8pubdh9KAEYzpKitGZ9123WK+ZpzhZ+aRg0/0NC2prOQW4A5CpxJb68xM90ueh20WUDBewvLAuoR7ZqWxcID1mUjFwlk1KLan7EXEJNHIB42cJoEDh7q">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-r">
