create github pages

--- a/page1.html
+++ b/page1.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-quPydGharx" once="menu" id="menu1-o" data-rv-view="372">
+<section class="menu cid-quPydGharx" once="menu" id="menu1-o" data-rv-view="390">
 
     
 
@@ -40,7 +40,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="https://yesme38.github.io/trad/">
-                         <img src="assets/images/a-128x128.png" alt="Atteipo" title="全球買主開發系統" media-simple="true" style="height: 3.8rem;">
+                         <img src="assets/images/a-128x128.png" alt="Mobirise" title="" media-simple="true" style="height: 3.8rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="https://yesme38.github.io/trad/">Atteipo</a></span>
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/d">free web page software</a></section><section class="features18 popup-btn-cards cid-qwZxKh5x06" id="features18-p" data-rv-view="374">
+<section class="engine"><a href="https://mobirise.co/n">bootstrap modal form</a></section><section class="features18 popup-btn-cards cid-qwZxKh5x06" id="features18-p" data-rv-view="392">
 
     
 
