--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-quPydGharx" once="menu" id="menu1-q" data-rv-view="44">
+<section class="menu cid-quPydGharx" once="menu" id="menu1-q" data-rv-view="21">
 
     
 
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/g">create your own website</a></section><section class="mbr-section form4 cid-qx8feM1o64" id="form4-r" data-rv-view="46">
+<section class="engine"><a href="https://mobirise.co/p">bootstrap navbar</a></section><section class="mbr-section form4 cid-qx8feM1o64" id="form4-r" data-rv-view="23">
 
     
 
@@ -94,7 +94,7 @@
                     <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
                     </div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="CxNS9BdMHBERw+3rrVRf8ru9a+2F26eHYR0/RVAwvgkaGe/bjlQsa/MGET4+c2M4uCVB+NzW/WmdaXrv1tCsuJlmx/MQ+Z/GphNsRz8MfCl/5bYUUgWql72YSpgWS5oF">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="0L1TQg9EvFMRunsY51AGKj9wWzH2BeejDNL147o9WA0gXkAbx2/yUsSh70JlSLTVX3mAyv6o9OYaCXJFLAwFC5MAWOcgEtN+L1rk1hQUEl5UU+FOHfGvQ26+ZZatO7cF">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-r">
