create github pages

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-quPydGharx" once="menu" id="menu1-q" data-rv-view="21">
+<section class="menu cid-quPydGharx" once="menu" id="menu1-q" data-rv-view="73">
 
     
 
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/p">bootstrap navbar</a></section><section class="mbr-section form4 cid-qx8feM1o64" id="form4-r" data-rv-view="23">
+<section class="engine"><a href="https://mobirise.co/g">how to create a website for free</a></section><section class="mbr-section form4 cid-qx8feM1o64" id="form4-r" data-rv-view="75">
 
     
 
@@ -94,7 +94,7 @@
                     <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
                     </div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="0L1TQg9EvFMRunsY51AGKj9wWzH2BeejDNL147o9WA0gXkAbx2/yUsSh70JlSLTVX3mAyv6o9OYaCXJFLAwFC5MAWOcgEtN+L1rk1hQUEl5UU+FOHfGvQ26+ZZatO7cF">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="rOCwZGdO7D6JYfUkp57G5myeEEEoyo9fG4p7au1fYdrBnsfju8cbXwosXSUg55xEWZfsEZ6zpUKZ9YHAWpf+YJQemBcIXOU0hVMsRhXRKwa5+HgYuemW/tfUcpTktFWd">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-r">
